@@ -3,5 +3,8 @@
 [infopack]
 infopackdir = %(datadir)s/infopacks
 
-[log]
-logfile = %(datadir)s/logs/pybot.log
+[testadora]
+mondir = /cnc/testadora/mon
+
+[sqlite]
+logfile = %(datadir)s/sqlite.db
