@@ -1,0 +1,33 @@
+# Copyright (c) 2000-2001 Gustavo Niemeyer <niemeyer@conectiva.com>
+#
+# This file is part of pybot.
+# 
+# pybot is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+# 
+# pybot is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with pybot; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+from pybot import config
+import sqlite
+
+class SQLiteDB:
+    def __init__(self):
+        self._path = config.get("sqlite", "path")
+        self._conn = sqlite.connect(self._path)
+        self._conn.autocommit = 1
+
+        self.error = sqlite.DatabaseError
+
+    def cursor(self):
+        return self._conn.cursor()
+
+# vim:ts=4:sw=4:et
